[package]
name = "osiris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "3.2.12", features = ["derive"] }
flexi_logger = { version = "0.22.5", features = ["async", "specfile", "compress"] }
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.139", features = ["derive"] }
tokio = { version = "1.20.0", features = ["full"] }
